dist_man1_MANS=

if BUILD_REVOLTD
  dist_man1_MANS+=revoltd.1
endif

if ENABLE_QT
  dist_man1_MANS+=revolt-qt.1
endif

if BUILD_REVOLT_CLI
  dist_man1_MANS+=revolt-cli.1
endif

if BUILD_REVOLT_TX
  dist_man1_MANS+=revolt-tx.1
endif

if BUILD_REVOLT_UTIL
  dist_man1_MANS+=revolt-util.1
endif

if ENABLE_WALLET
if BUILD_REVOLT_WALLET
  dist_man1_MANS+=revolt-wallet.1
endif
endif
